# vamq

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  check.ps1  skills-lock.json
.agents/skills/coffee-break/: SKILL.md
.github/workflows/: cicd.yml  publish.yml  rust.yml
docs/: openai_realtime_migration.md
src/: lib.rs
src/audio/: mod.rs
src/audio/upsampling/: mod.rs
src/audio/upsampling/general/: mod.rs  rate16to24.rs  rate24to48.rs
src/audio/vad/: consumer.rs  mod.rs  schema.rs
src/providers/: mod.rs
src/providers/openai/: config.rs  constants.rs  mod.rs  realtime.rs  schema.rs
src/providers/openai/tts/: guard.rs
src/queues/: ingress.rs  mod.rs  wsg_pub.rs
src/transform/: framing.rs  mod.rs  time.rs
src/transform/unrealengine/: audio_stream.rs  framer.rs  mod.rs
