[package]
name = "vamq"
version = "0.0.13"
edition = "2024"
license = "MIT"
description = "Consume audio chunk from Voice Activity Messaging via ZeroMQ."
repository = "https://github.com/patharanordev/vamq"
readme = "README.md"

[features]
default = [
    "audio-upsampling-general","vad-consumer","openai","zmq","ws","transform-audio","transform-datetime"
]
audio-upsampling = ["vad", "vad-consumer", "dep:rubato"] # all audio upsampling methods, support others AI providers audio format
audio-upsampling-general = ["vad", "vad-consumer", "dep:rubato"] # just only general audio upsampling methods
vad = ["audio-upsampling", "audio-upsampling-general", "zmq"] # all related VAD
vad-consumer = ["audio-upsampling", "audio-upsampling-general", "zmq"] # just only related VAD consumer
openai = [
    "dep:tokio", "dep:secrecy", "dep:base64", "dep:futures", 
    "dep:serde_json", "dep:tokio-tungstenite", "dep:tungstenite",
    "dep:rustls"
]
zmq = ["dep:zmq"]
ws = [
    "dep:futures", "dep:futures-util", "dep:tokio", 
    "dep:tokio-tungstenite", "dep:tungstenite", "dep:rustls"
]
transform-audio = ["dep:byteorder"]
transform-datetime = []

[dependencies]
anyhow = { version = "1.0.100" }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = { version = "0.24", optional = true, default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
# pick exactly one provider for rustls
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring"] }
tungstenite = { version = "0.24", optional = true, features = ["handshake"] }
futures = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
zmq = { version = "0.10", optional = true }
bytes = { version = "1", optional = true }
tracing = { version = "0.1" }
base64 = { version = "0.22", optional = true }
byteorder = { version = "1.5.0", optional = true }
secrecy = { version = "0.10.3", optional = true, features = ["serde"] }
rubato = { version = "0.14", optional = true }
futures-util = { version = "0.3.31", optional = true }